--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <meta name="description" content="Kartenhalter «draht» mit Platz für 1–6 Karten, eine CHF 2 Münze und deine Banknoten.">
         <meta name="keywords" content="Kartenhalter, card holder, cardholder, portemonnaie, geldbörse, Swiss Made, ZHdK, Zürcher Hochschule der Künste, Jonatan Bischof, Studio3000, Studio3k, Studio Dreitausend, studio dreitausen, Zürich, Museum für Gestaltung, draht, Banknoten, CHF, Münze, Geld, Karten, Schweiz">
         
-        <title>Studio3000</title>
+        <title>Studio3000; Kartenhalter «draht»</title>
         
         <link rel="stylesheet" href="style/main.css">
         <script src="https://cdn.shopify.com/s/javascripts/buy-button-storefront.min.js"></script>
