--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <script src="https://cdn.shopify.com/s/javascripts/buy-button-storefront.min.js"></script>
         <script type="module" src="https://ajax.googleapis.com/ajax/libs/model-viewer/3.2.0/model-viewer.min.js"></script>
         <script src="https://code.jquery.com/jquery-1.11.0.min.js"></script>
-        <script src="script.js"></script>
+        <script src="/script.js"></script>
     </head>
     
     <body>
@@ -212,33 +212,33 @@
 <!-- MODELVIEWER -->
             <section>
                 <div class="draht">
-                <model-viewer camera-controls touch-action="pan-y" disable-zoom interaction-prompt="none" src="assets/Karte-final.glb" shadow-intensity="0" shadow-softness="0" exposure="1.25" auto-rotate>
+                <model-viewer camera-controls touch-action="pan-y" disable-zoom interaction-prompt="none" src="/assets/Karte-final.glb" shadow-intensity="0" shadow-softness="0" exposure="1.25" auto-rotate>
                 </model-viewer>  
                 </div>
             </section>
 
 <!-- DESCRIPTION -->
             <section class="description">
-                      <div class="slide1"><h2>Kartenhalter<br>aus 68cm Draht</h2><img src="assets/1-10.JPG"></div>
+                      <div class="slide1"><h2>Kartenhalter<br>aus 68cm Draht</h2><img src="/assets/1-10.JPG"></div>
             </section>
             <section class="description">
-              <div class="slide2"><h2>mit Platz für<br>+ 1—6 Karten<br>+ CHF 2 Münze<br>+ Banknoten</h2><img src="assets/Funktion-0238.jpg"></div>
+              <div class="slide2"><h2>mit Platz für<br>+ 1—6 Karten<br>+ CHF 2 Münze<br>+ Banknoten</h2><img src="/assets/Funktion-0238.jpg"></div>
              </section>
               <section class="description">
-                <div class="slide3"><h2>CHF 26.-<br>inkl. Versand<br>2—3 Werktage</h2><img src="assets/1-8.JPG"></div>
+                <div class="slide3"><h2>CHF 26.-<br>inkl. Versand<br>2—3 Werktage</h2><img src="/assets/1-8.JPG"></div>
       </section>
       <section class="description">
-        <div class="slide4"><h2>Chromnickelstahl<br>100% Rostfrei</h2><img src="assets/1-7.JPG"></div>
+        <div class="slide4"><h2>Chromnickelstahl<br>100% Rostfrei</h2><img src="/assets/1-7.JPG"></div>
       </section>
       <section class="description">
-        <div class="slide6"><h2>Hergestellt<br>in der Schweiz</h2><img src="assets/close-up-prozess.00_03_04_11.Standbild001.jpg"></div>
+        <div class="slide6"><h2>Hergestellt<br>in der Schweiz</h2><img src="/assets/close-up-prozess.00_03_04_11.Standbild001.jpg"></div>
       </section>
       <section class="description">
-        <div class="slide5"><h2>1 Material<br>Komplett Rezyklierbar</h2><img src="assets/DSCF0112.jpg"></div>
+        <div class="slide5"><h2>1 Material<br>Komplett Rezyklierbar</h2><img src="/assets/DSCF0112.jpg"></div>
       </section>
 
       <section class="description">
-        <div class="slide7"><img src="assets/DSC00201.jpg"></div>
+        <div class="slide7"><img src="/assets/DSC00201.jpg"></div>
        </section>
 
 <!-- SHOP -->
